# xpu-dub

./: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml  todo.md  执行记录.md  配置环境.md
dub/: subtitle_extractor.py  subtitle_translator.py  voice_generator.py
index-tts/: .gitignore  pyproject.toml
index-tts/cli_tests/: test_cli_v2_concat.py
index-tts/docs/: README_zh.md
index-tts/examples/: cases.jsonl
index-tts/indextts/: cli.py  infer_v2.py
index-tts/indextts/utils/: checkpoint.py  examples_downloader.py  maskgct_utils.py  model_download.py  network_detection.py
index-tts/tests/: conftest.py  padding_test.py  test_v1.py  test_v2.py
test/: 设备测试.py
